# PolyWeather

./: .env.example  .env.secrets.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  README_ZH.md  RELEASE.md  deploy.ps1  deploy.sh  docker-compose.yml  grep.exe.stackdump  index.html  requirements.txt
.claude/: settings.local.json
docs/: AIRPORT_MARKET_MONITOR_ZH.md  AIRPORT_REALTIME_SOURCES.md  API_ZH.md  CITY_DATA_SOURCES.md  COMMERCIALIZATION.md  CONFIGURATION_ZH.md  EMOS_TRAINING_REPORT_ZH.md  FRONTEND_DEPLOYMENT_ZH.md  MODEL_STACK_AND_DEB_ZH.md  MONITORING_ZH.md  SERVICES_ZH.md  SUPABASE_SETUP_ZH.md  TECH_DEBT.md  TECH_DEBT_ZH.md  data-architecture-review.md  deep-research-report.md  frontend-ui-design-review.md  product-review-jun-2026.md  ux-research-review.md
extension/: README.md  manifest.json
frontend/: .env.example  .env.local  .env.production  Dockerfile  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  prod.Dockerfile  tailwind.config.ts
monitoring-web/: Cargo.toml  market-monitor.service
monitoring-web/src/: db.rs  main.rs  model.rs  trend.rs
monitoring-web/static/: style.css
monitoring-web/templates/: monitor.html
scripts/: auto_retrain_probability_calibration.py  backtest_deb_versions.py  backtest_metar_calibrated_path.py  create_forum_topics.py  delete_forum_topic.py  reconcile_payment_tx.py  scan_forum_topics.py  sync_version.py
tests/: test_amsc_awos_sources.py  test_analysis_ttl.py  test_auth_timing_instrumentation.py  test_auto_retrain_probability_calibration.py  test_bot_basic_handler.py  (+41 more)
(+432 files in other folders)
